--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,18 @@
 </head>
 
 <body>
+	<header>
+		<h1>
+			CSS Practice Exercise
+		</h1>
+	</header>
 	<ul>
 		<li><a href="/exercise/1">Exercise 1</a></li>
-		<li><a href="/exercise/2">Exercise 2</a></li>
-		<li><a href="/exercise/3">Exercise 3</a></li>
-		<li><a href="/exercise/4">Exercise 4</a></li>
-		<li><a href="/exercise/5">Exercise 5</a></li>
+		<li><a href="/exercise/2"><span>Exercise 2</span><span>Comming Soon</span></a></li>
+		<li><a href="/exercise/3"><span>Exercise 3</span><span>Comming Soon</span></a></li>
+		<li><a href="/exercise/4"><span>Exercise 4</span><span>Comming Soon</span></a></li>
+		<li><a href="/exercise/5"><span>Exercise 5</span><span>Comming Soon</span></a></li>
+		<li><a href="/exercise/6"><span>Exercise 6</span><span>Comming Soon</span></a></li>
 	</ul>
 </body>
 
