--- a/exercise/1/index.html
+++ b/exercise/1/index.html
@@ -64,7 +64,7 @@
 			BTW, before you start coding let me introduce your tools.
 		</p>
 		<p>
-			On your left. You should see an editor. This is a tool which you will use to code a CSS code.
+			On your right. You should see an editor. This is a tool which you will use to code a CSS code.
 		</p>
 		<p>
 			On the top of window, you should see triple dots at the center on both editor and this window. You can grap
@@ -104,12 +104,18 @@
 
 	<style>
 		.introduction {
+			box-sizing: border-box;
 			width: 450px;
 
-			top: 21px;
+			top: 20px;
 			left: 500px;
 
 			font-family: monospace;
+		}
+
+		.introduction h1 {
+			margin-block-start: 0.67em;
+			margin-block-end: 0.67em;
 		}
 	</style>
 </body>
