--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 		<h3 id="asvasdio">Editor</h3>
 		<div class="solution">
 			<span>
-				<input type="radio" name="mode" id="edit">
+				<input type="radio" name="mode" id="edit" checked>
 				<label for="edit">Edit</label>
 			</span>
 			<span>
@@ -33,6 +33,8 @@
 		min-width: 400px;
 		min-height: 600px;
 		box-sizing: border-box;
+		top: 20px;
+		right: 50px;
 	}
 
 	.editor div#adoisjfknm {
@@ -266,6 +268,8 @@
 			styleEditor.innerText = solution
 			linkElement.parentNode.removeChild(linkElement)
 		} else if (previewRadio.checked) {
+			if (temp || temp === '')
+				styleEditor.innerText = temp
 			if (styleEditor.tagName === 'STYLE')
 				styleEditor = swap(styleEditor);
 
